syntax = "proto3";
package new_world_robot.v1;

option go_package = "new-world-robot/api/new-world-robot/v1;v1";
import "biz.proto";

message RobotMemory {
  message Auth {
    string face = 1;
    string f_key = 2;
    string access_token = 3;
    string uid = 4;
  }
  message Assets {
    int64 exp = 1;
    int64 gold = 2;
    int32 level = 3;
  }
  message Fishes {
    message Fish {
      int64 fish_id = 1;
      shared.v1.FishStatus statue = 13;
    }
    repeated Fish fish_list = 1;
  }
  message Market {
    int64 product_id = 1;
    int64 price = 2;
  }
  Auth auth = 1;
  Assets assets = 2;
  Fishes fishes = 3;
  map<string, string> parkingMap = 4;
  repeated Market marketMap = 5;
  map<int64, int64> mine_fish_product_relation = 6;
}