syntax = "proto3";
package kratos.api;

option go_package = "new-world-robot/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  App app = 3;
  Robots robots = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message App {

  string base_url = 1;
  string auth_url = 2;
  string asset_url = 3;
  string create_fish_url = 4;
  string expand_parking_url = 5;
  string parking_list_url = 6;

  string fish_list_url = 11;
  string fish_sleep_url = 12;
  string fish_alive_url = 13;
  string fish_refining_url = 14;
  string pool_rank_url = 15;

  string market_list_url = 21;
  string market_detail_url = 22;
  string market_sell_url = 23;
  string market_stop_sell_url = 24;
  string market_buy_url = 25;

  int32 runner_group_size = 101;
  int32 robot_count = 102;
}

message Robots {
  message Robot {
    int32 robot_count = 1;
    int32 robot_start_uid = 2;
    string f_key = 3;
  }
  Robot auth = 1;
}
